Config environment: security, swagger amd logger

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.1",
@@ -31,11 +32,13 @@
     "class-validator": "^0.13.2",
     "express-rate-limit": "^6.4.0",
     "helmet": "^5.1.0",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "nest-winston": "^1.6.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.4.0",
     "typeorm": "^0.3.7",
     "winston": "^3.8.1"
   },
