--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm",
+    "typeorm:generate": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:generate -d src/database/ormconfig.ts",
+    "typeorm:create": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:create -d src/database/ormconfig.ts",
+    "typeorm:run": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run -d src/database/ormconfig.ts"
   },
   "dependencies": {
-    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -34,11 +37,15 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "es6-shim": "^0.35.6",
     "express-rate-limit": "^6.4.0",
     "helmet": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "nest-winston": "^1.6.2",
+    "nestjs-http-promise": "^1.2.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -71,7 +78,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.8.2",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
   },
