--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "mysql2": "^2.3.3",
     "nest-winston": "^1.6.2",
     "nestjs-http-promise": "^1.2.3",
+    "node-mocks-http": "^1.11.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sinon": "^14.0.0",
     "swagger-ui-express": "^4.4.0",
     "typeorm": "^0.3.7",
     "winston": "^3.8.1"
